fix(Hero): no more weight animation on mobile

--- a/styles/base/headings.scss
+++ b/styles/base/headings.scss
@@ -5,6 +5,10 @@ h2 {
 	> div {
 		> div {
 			font-variation-settings: 'wght' var(--weight);
+
+			@media all and (max-width: $from-small) {
+				font-variation-settings: 'wght' 74;
+			}
 		}
 	}
 	font-variation-settings: 'wght' 74;
